tests/neg/i13769.check
-- [E035] Syntax Error: tests/neg/i13769.scala:2:21 --------------------------------------------------------------------
2 |val te = tup.map((x: _ <: Int) => List(x)) // error
  |                     ^^^^^^^^
  |                     Unbound wildcard type
  |
  | longer explanation available when compiling with `-explain`
